--- a/src/app/panel-why/side-nav/menu-nav/menu-nav.component.scss
+++ b/src/app/panel-why/side-nav/menu-nav/menu-nav.component.scss
@@ -1,8 +1,8 @@
 ::ng-deep .mat-list-base .mat-list-item{
-    color: #717171;
+    color: white;
 }
 .activo{
-    color: #134A74 !important;
+    color: #aab1b6 !important;
     font-weight: 500;
 }
 .activo:focus{
