--- a/src/app/auth/recovery/recovery.component.scss
+++ b/src/app/auth/recovery/recovery.component.scss
@@ -1,6 +1,30 @@
 mat-card{
     position: absolute;
-    left: 35%;
-    top: 35%;
+    left: 40%;
+    top: 25%;
     width: 20%;
+    -webkit-box-shadow: 0px 2px 16px 0px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 2px 16px 0px rgba(0,0,0,0.75);
+box-shadow: 0px 2px 16px 0px rgba(0,0,0,0.75);
 }
+
+.bg {
+    /* The image used */
+    background-image: url("https://backend-app.panelwhy.com/static/img/login.jpg");
+  
+    /* Full height */
+    height: 100%;
+  
+    /* Center and scale the image nicely */
+    background-position: bottom;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+
+  .bg-trasparente {
+    position: absolute;
+    left: 40%;
+    top: 20%;
+    width: 20%;
+    background-color: rgba(0,0,0,0.8);
+  }
