--- a/src/app/panel-why/modules/pagos/components/tabla-pagos/tabla-pagos.component.html
+++ b/src/app/panel-why/modules/pagos/components/tabla-pagos/tabla-pagos.component.html
@@ -46,7 +46,7 @@
           <td class="mat-cell" colspan="4">No hay datos para mostrar</td>
         </tr>
       </table>
-      <mat-paginator
+      <mat-paginator style="width: 90%;"
       [pageSize]="5"
       [pageSizeOptions] = "[5,10,20,100]"
       >
