--- a/src/app/panel-why/side-nav/side-nav.component.scss
+++ b/src/app/panel-why/side-nav/side-nav.component.scss
@@ -7,3 +7,8 @@ mat-sidenav-container{
     margin-top: 3em;
     margin-left: 3em;
 }
+
+.bg-gradiente{
+    background: rgb(196,70,89);
+    background: linear-gradient(0deg, rgba(196,70,89,1) 0%, rgba(196,78,96,1) 100%);
+}
