--- a/src/app/panel-why/modules/dashboard/dashboard.component.html
+++ b/src/app/panel-why/modules/dashboard/dashboard.component.html
@@ -1,13 +1,13 @@
 <div class="row">
-    <mat-card class="example-card text-white bg-secondary col-lg-3">
+    <mat-card class="example-card text-white bg-secondary col-lg-2">
         <mat-card-header>
             <mat-card-title>Puntos actuales</mat-card-title>
         </mat-card-header>
         <mat-card-content>
-            <mat-card-subtitle>{{actuales | number}}</mat-card-subtitle>
+            <mat-card-subtitle class="text-white">{{actuales | number}}</mat-card-subtitle>
         </mat-card-content>
       </mat-card>
-      <mat-card class="example-card">
+      <mat-card class="example-card  text-white bg-secondary col-lg-2 ms-3">
         <mat-card-header>
             <mat-card-title>Puntos totales</mat-card-title>
         </mat-card-header>
@@ -15,7 +15,7 @@
             <mat-card-subtitle class="text-white font-weight-bold">{{total | number}}</mat-card-subtitle>
         </mat-card-content>
       </mat-card>
-      <mat-card class="example-card text-white bg-secondary col-lg-3 ms-3">
+      <mat-card class="example-card text-white bg-secondary col-lg-2 ms-3">
         <mat-card-header>
             <mat-card-title>Puntos a redimir</mat-card-title>
         </mat-card-header>
@@ -25,7 +25,7 @@
       </mat-card>
       
       
-      <mat-card class="example-card text-white bg-secondary col-lg-3 ms-3">
+      <mat-card class="example-card text-white bg-secondary col-lg-2 ms-3">
         <mat-card-header>
             <mat-card-title>Valor</mat-card-title>
         </mat-card-header>
