--- a/src/app/panel-why/modules/pagos/components/tabla-pagos/tabla-pagos.component.html
+++ b/src/app/panel-why/modules/pagos/components/tabla-pagos/tabla-pagos.component.html
@@ -1,5 +1,6 @@
 <div class="table-container">
-    <div class="mat-elevation-z1">
+  <h2>Informacion de Pagos</h2>
+    <div class="mat-elevation-z1" style="width: 90%;">
       <table  [dataSource]="dataSource" mat-table  matSort>
 
         <ng-container matColumnDef="points">
@@ -46,7 +47,7 @@
           <td class="mat-cell" colspan="4">No hay datos para mostrar</td>
         </tr>
       </table>
-      <mat-paginator style="width: 90%;"
+      <mat-paginator style="width: 100%;"
       [pageSize]="5"
       [pageSizeOptions] = "[5,10,20,100]"
       >
