--- a/src/app/panel-why/modules/puntos/components/tabla-puntos/tabla-puntos.component.html
+++ b/src/app/panel-why/modules/puntos/components/tabla-puntos/tabla-puntos.component.html
@@ -1,5 +1,6 @@
 <div>
-    <div class="mat-elevation-z1">
+    <h2>Informacion de Puntos</h2>
+    <div class="mat-elevation-z1" style="width: 90%;">
       <table  [dataSource]="dataSource" mat-table  matSort>
 
         <ng-container matColumnDef="study_code">
@@ -46,7 +47,7 @@
           <td class="mat-cell" colspan="4">No hay datos para mostrar</td>
         </tr>
       </table>
-      <mat-paginator
+      <mat-paginator style="width: 100%;"
       [pageSize]="5"
       [pageSizeOptions] = "[5,10,20,100]"
       >
