--- a/src/app/panel-why/side-nav/menu-nav/menu-nav.component.html
+++ b/src/app/panel-why/side-nav/menu-nav/menu-nav.component.html
@@ -8,9 +8,9 @@
             <i class="fi-rr-bank" style="margin-right: 1rem;"></i> Dashboard
         </a>
 
-        <!-- <a mat-list-item [routerLink]="['/panel-why/perfil']" routerLinkActive="activo">
+        <a mat-list-item [routerLink]="['/panel-why/perfil']" routerLinkActive="activo">
             <i class="fi-rr-calculator" style="margin-right: 1rem;"></i> Perfil
-        </a> -->
+        </a>
 
         <a mat-list-item [routerLink]="['/panel-why/pagos']" routerLinkActive="activo" >
             <i class="fi-rr-stats" style="margin-right: 1rem;"></i> Pagos
