Visualización de formulario perfil

--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -108,7 +108,7 @@
                         <button mat-raised-button color="primary" class="col-xs-12 col-sm-12 col-md-5 col-lg-5 ms-1" (click)="continue()">Continuar</button>
                     </div>
                     <div class="col-12" *ngIf="!showBtns">
-                        <button mat-raised-button color="primary" class="col-xs-12 col-sm-12 col-md-5 col-lg-5 ms-1" (click)="continue()">Actualizar</button>
+                        <button mat-raised-button color="primary" class="col-xs-12 col-sm-12 col-md-5 col-lg-5 ms-1" (click)="updateProfile()">Actualizar</button>
                     </div>
                 </form>
             </div>
