--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -11,10 +11,7 @@
                         <mat-label>Tipo de documento</mat-label>
                         <mat-select formControlName="society_nit_type_id">
                             <mat-option>.......</mat-option>
-                            <mat-option [value]="1">Cédula de ciudadanía</mat-option>
-                            <mat-option [value]="2">Cédula de extranjería</mat-option>
-                            <mat-option [value]="3">Pasaporte</mat-option>
-                            <mat-option [value]="4">Tarjeta de identidad</mat-option>
+                            <mat-option *ngFor="let tipo of tipos_docs" [value]="tipo.id">{{tipo.description}}</mat-option>
                         </mat-select>
                     </mat-form-field>
                     <mat-form-field appearance="outline" class="col-xs-12 col-sm-12 col-md-12 col-lg-5 ms-1">
