Ajustes según solitud correos

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                     <mat-card-footer class="text-white">App design and development by
-                        CAMTECH™ © 2016-{{anio}}
+                        CAMTECH™ © 2016-{{currentYear}}
                         Todos los derechos reservados.</mat-card-footer>
                 </form>
             </mat-card>
