--- a/src/app/panel-why/modules/puntos/components/tabla-puntos/tabla-puntos.component.html
+++ b/src/app/panel-why/modules/puntos/components/tabla-puntos/tabla-puntos.component.html
@@ -53,4 +53,7 @@
       >
     </mat-paginator>
     </div>
+    <div class="descripcion">
+      <span>CR: Créditos, RV: Reversos, RD: Redenciones</span>
+    </div>
 </div>
