--- a/src/app/panel-why/side-nav/side-nav.component.scss
+++ b/src/app/panel-why/side-nav/side-nav.component.scss
@@ -5,7 +5,18 @@ mat-sidenav-container{
 
 mat-sidenav{
     padding-left: 2em;
-    width: 20em
+    width: 20em;
+    ::ng-deep .sidenav{
+        padding-right: 2em;
+    }
+}
+
+mat-sidenav-content{
+    img{
+        position: absolute;
+        bottom: 2em;
+        right: 2em;
+    }
 }
 
 .content{
