--- a/src/app/auth/registrarse/registrarse.component.scss
+++ b/src/app/auth/registrarse/registrarse.component.scss
@@ -5,3 +5,18 @@
 ::ng-deep .mat-checkbox-background {
     background-color: rgb(143, 138, 138); //off-white
 }
+
+section{
+    text-align: left;
+    margin-left: -2em;
+}
+mat-checkbox{
+    p{
+        text-align: left;
+    }
+}
+
+ul {
+    list-style-type: none;
+    margin-top: 4px;
+  }
