--- a/src/app/panel-why/modules/dashboard/dashboard.component.html
+++ b/src/app/panel-why/modules/dashboard/dashboard.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <mat-card class="example-card text-white bg-secondary col-lg-2">
         <mat-card-header>
-            <mat-card-title>Puntos actuales</mat-card-title>
+            <mat-card-title>Puntos Totales</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <mat-card-subtitle class="text-white">{{actuales | number}}</mat-card-subtitle>
@@ -9,7 +9,7 @@
       </mat-card>
       <mat-card class="example-card  text-white bg-secondary col-lg-2 ms-3">
         <mat-card-header>
-            <mat-card-title>Puntos totales</mat-card-title>
+            <mat-card-title>Puntos Históricos</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <mat-card-subtitle class="text-white font-weight-bold">{{total | number}}</mat-card-subtitle>
@@ -17,7 +17,7 @@
       </mat-card>
       <mat-card class="example-card text-white bg-secondary col-lg-2 ms-3">
         <mat-card-header>
-            <mat-card-title>Puntos a redimir</mat-card-title>
+            <mat-card-title>Puntos Redimidos</mat-card-title>
         </mat-card-header>
         <mat-card-content>
             <mat-card-subtitle class="text-white font-weight-bold">{{redimir | number}}</mat-card-subtitle>
@@ -27,7 +27,7 @@
       
       <mat-card class="example-card text-white bg-secondary col-lg-2 ms-3">
         <mat-card-header>
-            <mat-card-title>Valor</mat-card-title>
+            <mat-card-title>Ganancias</mat-card-title>
         </mat-card-header>
         <mat-card-content>
 
@@ -35,4 +35,7 @@
 
         </mat-card-content>
       </mat-card>
+</div>
+<div class="mt-5 text-center col-8">
+    <h2>¡Acá podrás revisar toda tu actividad en el panel!</h2>
 </div>
