--- a/src/app/panel-why/modules/pagos/components/tabla-pagos/tabla-pagos.component.html
+++ b/src/app/panel-why/modules/pagos/components/tabla-pagos/tabla-pagos.component.html
@@ -15,8 +15,8 @@
 
 
         <ng-container matColumnDef="mobile_number">
-          <th mat-header-cell *matHeaderCellDef> Celular </th>
-          <td mat-cell *matCellDef="let element"> {{element.mobile_number | number}} </td>
+          <th mat-header-cell *matHeaderCellDef> Cuenta </th>
+          <td mat-cell *matCellDef="let element"> {{element.mobile_number}} </td>
         </ng-container>
 
         <ng-container matColumnDef="way_to_pay">
@@ -52,5 +52,8 @@
       [pageSizeOptions] = "[10,20,100]"
       >
     </mat-paginator>
-    </div>
+  </div>
+  <div class="descripcion">
+    <span>PG: Pagos, RV: Reversos</span>
+  </div>
 </div>
