--- a/src/app/panel-why/side-nav/side-nav.component.html
+++ b/src/app/panel-why/side-nav/side-nav.component.html
@@ -7,5 +7,6 @@
         <div class="content">
             <router-outlet></router-outlet>
         </div>
+        <img class="ms-4 img-fluid" src="https://backend-app.panelwhy.com/static/img/logo_transparente.png" alt="" height="200px" width="200px"><br>
     </mat-sidenav-content>
 </mat-sidenav-container>
