--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -1,11 +1,10 @@
-<div class="container-fluid text-center mt-5" [hidden]="!showForm">
+<div class="container-fluid text-center mt-5">
     <div class="row">
         <div class="col-lg-3">           
         </div>
         <div class="col-lg-6">
             <div class="cuadro pt-5 pb-5 ps-1 pe-1 rounded">
-                <h1 *ngIf="showBtns">¡Ya casi! Completa tu información</h1>
-                <h1 *ngIf="!showBtns">Actualización de perfil</h1>
+                <h1>¡Ya casi! Completa tu información</h1>
                 <form [formGroup]="profileForm">
                     <mat-form-field appearance="outline" class="col-xs-12 col-sm-12 col-md-5 col-lg-5 ms-1">
                         <mat-label>Tipo de documento</mat-label>
@@ -92,7 +91,7 @@
                         </mat-select>
                         <mat-error *ngIf="profileForm.get('society_income_level_id').hasError('required')">Por favor este campo es requerido</mat-error>
                     </mat-form-field>
-                    <mat-form-field appearance="outline" class="col-xs-12 col-sm-12 col-md-12 col-lg-10 ms-1">
+                    <mat-form-field appearance="outline" class="col-xs-12 col-sm-12 col-md-12 col-lg-5 ms-1">
                         <mat-label>Forma de pago</mat-label>
                         <mat-select formControlName="society_way_to_pay_id">
                             <mat-option>--------------</mat-option>
@@ -100,12 +99,15 @@
                         </mat-select>
                         <mat-error *ngIf="profileForm.get('society_way_to_pay_id').hasError('required')">Por favor este campo es requerido</mat-error>
                     </mat-form-field> 
-                    <div class="col-12" *ngIf="showBtns">
+                    <mat-form-field appearance="outline" class="col-xs-12 col-sm-12 col-md-12 col-lg-5 ms-1">
+                        <mat-label>Código referencia</mat-label>
+                        <input type="text" matInput  formControlName="reference_code" (change)="coodeReference()">
+                        <mat-icon *ngIf="validCode" matSuffix class="text-success" matTooltip="El código ingresado es valido"><i class="fi-rr-check"></i></mat-icon>
+                        <mat-icon *ngIf="invalidCode" matSuffix class="text-danger" matTooltip="El código ingresado no encontro"><i class="fi-rr-cross"></i></mat-icon>
+                    </mat-form-field>
+                    <div class="col-12">
                         <button mat-stroked-button color="primary" class="col-xs-12 col-sm-12 col-md-5 col-lg-5" (click)="cancel()">Cancelar</button>
                         <button mat-raised-button color="primary" class="col-xs-12 col-sm-12 col-md-5 col-lg-5 ms-1" (click)="continue()">Continuar</button>
-                    </div>
-                    <div class="col-12" *ngIf="!showBtns">
-                        <button mat-raised-button color="primary" class="col-xs-12 col-sm-12 col-md-5 col-lg-5 ms-1" (click)="updateProfile()">Actualizar</button>
                     </div>
                 </form>
             </div>
