--- a/src/app/panel-why/modules/pagos/components/tabla-pagos/tabla-pagos.component.html
+++ b/src/app/panel-why/modules/pagos/components/tabla-pagos/tabla-pagos.component.html
@@ -1,5 +1,5 @@
 <div class="table-container">
-  <h2>Informacion de Pagos</h2>
+  <h2>Información de Pagos</h2>
     <div class="mat-elevation-z1" style="width: 90%;">
       <table  [dataSource]="dataSource" mat-table  matSort>
 
