--- a/src/app/panel-why/modules/puntos/components/tabla-puntos/tabla-puntos.component.html
+++ b/src/app/panel-why/modules/puntos/components/tabla-puntos/tabla-puntos.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h2>Informacion de Puntos</h2>
+    <h2>Información de Puntos</h2>
     <div class="mat-elevation-z1" style="width: 90%;">
       <table  [dataSource]="dataSource" mat-table  matSort>
 
