--- a/src/app/panel-why/side-nav/menu-nav/menu-nav.component.html
+++ b/src/app/panel-why/side-nav/menu-nav/menu-nav.component.html
@@ -11,7 +11,8 @@
       {{name | titlecase}}
     </h2>
     <h3 class="text-white" style="margin-top: -1em; margin-left: 3.5em;">Puntos: {{actual | number}}</h3>
-    <h5 style="margin-top: -1.8em; margin-left: 4.8em;">Categoría: {{categoria}}</h5>
+    <h5 style="margin-top: -1.8em; margin-left: 4.8em;">ID: {{codigo}}</h5>
+    <h5 style="margin-top: -1.2em; margin-left: 4.8em;">Categoría: {{categoria}}</h5>
   </div>
     <mat-nav-list class="menu">
         
