--- a/src/app/panel-why/modules/pagos-admin/pagos-admin.component.html
+++ b/src/app/panel-why/modules/pagos-admin/pagos-admin.component.html
@@ -1,1 +1,5 @@
-<p>pagos-admin works!</p>
+<div class="mb-5">
+    <h2>Pagos</h2>
+    <p>Aqui podrás administrar los pagos de los asociados.</p>
+</div>
+<app-tabla-pagos-admin></app-tabla-pagos-admin>
