--- a/src/app/panel-why/modules/perfiles/perfiles.component.html
+++ b/src/app/panel-why/modules/perfiles/perfiles.component.html
@@ -1,1 +1,6 @@
-<p>perfiles works!</p>
+<div class="mb-5">
+    <h2>Perfiles</h2>
+    <p>Aqui podrás administrar a los perfiles del sistema</p>
+</div>
+
+<app-tabla-perfiles></app-tabla-perfiles>
