--- a/src/app/panel-why/modules/puntos-admin/puntos-admin.component.html
+++ b/src/app/panel-why/modules/puntos-admin/puntos-admin.component.html
@@ -1,1 +1,5 @@
-<p>puntos-admin works!</p>
+<div class="mb-5">
+    <h2>Puntos</h2>
+    <p>Aqui podrás administrar los puntos de los asociados.</p>
+</div>
+<app-tabla-puntos-admin></app-tabla-puntos-admin>
