--- a/src/app/panel-why/modules/usuarios/usuarios.component.html
+++ b/src/app/panel-why/modules/usuarios/usuarios.component.html
@@ -1,1 +1,5 @@
-<p>usuarios works!</p>
+<div class="mb-5">
+    <h2>Usuarios</h2>
+    <p>Aqui podrás administrar a los usuarios del sistema</p>
+</div>
+<app-tabla-usuarios></app-tabla-usuarios>
