--- a/src/app/panel-why/side-nav/menu-nav/menu-nav.component.html
+++ b/src/app/panel-why/side-nav/menu-nav/menu-nav.component.html
@@ -59,15 +59,19 @@
         <div *ngIf="superUser">
           <mat-divider></mat-divider>
           <a mat-list-item [routerLink]="['/panel-why/usuarios']" routerLinkActive="activo" >
+            <mat-icon matPrefix><i class="fi-rr-users"></i></mat-icon>
             Usuarios
           </a>
           <a mat-list-item [routerLink]="['/panel-why/perfiles']" routerLinkActive="activo">
+            <mat-icon matPrefix><i class="fi-rr-portrait"></i></mat-icon>
             Perfiles
           </a>
           <a mat-list-item [routerLink]="['/panel-why/puntos-admin']" routerLinkActive="activo">
+            <mat-icon matPrefix><i class="fi-rr-diamond"></i></mat-icon>
             Puntos
           </a>
           <a mat-list-item [routerLink]="['/panel-why/pagos-admin']" routerLinkActive="activo">
+            <mat-icon matPrefix><i class="fi-rr-credit-card"></i></mat-icon>
             Pagos
           </a>
         </div>
