--- a/src/styles.scss
+++ b/src/styles.scss
@@ -43,3 +43,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   padding-left: 2em;
   padding-right: 2em;
 }
+
+table{
+  width: 100%;
+  text-align: center
+}
