--- a/src/app/panel-why/side-nav/side-nav.component.html
+++ b/src/app/panel-why/side-nav/side-nav.component.html
@@ -1,5 +1,5 @@
 <mat-sidenav-container class="col-12">
-    <mat-sidenav #sideNav mode="side" class="col-lg-2 bg-gradiente" [opened]="opened">
+    <mat-sidenav #sideNav mode="side" class="col-lg-2 bg-gradiente s" [opened]="opened">
        <app-menu-nav></app-menu-nav>
     </mat-sidenav>
     
