--- a/src/app/panel-why/modules/puntos-admin/tabla-puntos-admin/tabla-puntos-admin.component.html
+++ b/src/app/panel-why/modules/puntos-admin/tabla-puntos-admin/tabla-puntos-admin.component.html
@@ -1,12 +1,12 @@
-<div class="btns-table">
+<div>
     <div></div>
-    <button mat-stroked-button class="btn-back">
+    <button mat-stroked-button class="btn-back float-end me-2 mb-2 me-md-4 mb-md-4">
       Cargar Puntos
       <mat-icon matSuffix style="font-size: 1em;margin-top: .5em;"><i class="fi-rr-upload"></i></mat-icon>
     </button>
   </div>
-<div class="table-container">
-    <div class="mat-elevation-z1" style="width: 90%;">
+<div class="ms-2 ms-md-4 me-2 me-md-4 mb-5 mb-md-0">
+    <div class="mat-elevation-z1">
       <table  [dataSource]="dataSource" mat-table  matSort>
 
         <ng-container matColumnDef="acciones">
