--- a/src/app/panel-why/modules/puntos/components/tabla-puntos/tabla-puntos.component.html
+++ b/src/app/panel-why/modules/puntos/components/tabla-puntos/tabla-puntos.component.html
@@ -1,6 +1,6 @@
-<div>
+<div class="ms-2 ms-md-4 me-2 me-md-4 mb-3 mb-md-0">
     <h2>Información de Puntos</h2>
-    <div class="mat-elevation-z1" style="width: 90%;">
+    <div class="mat-elevation-z1">
       <table  [dataSource]="dataSource" mat-table  matSort>
 
         <ng-container matColumnDef="study_code">
@@ -53,7 +53,7 @@
       >
     </mat-paginator>
     </div>
-    <div class="descripcion">
+    <div class="descripcion  float-end">
       <span>CR: Créditos, RV: Reversos, RD: Redenciones</span>
     </div>
 </div>
