--- a/src/app/panel-why/modules/dashboard/dashboard.component.html
+++ b/src/app/panel-why/modules/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <mat-card class="example-card text-white bg-secondary col-lg-2">
+    <mat-card class="example-card text-white bg-secondary col-xs-12 col-lg-2 ms-2 ms-lg-4 mt-4 mt-md-2  me-2">
         <mat-card-header>
             <mat-card-title>Puntos Totales</mat-card-title>
         </mat-card-header>
@@ -7,7 +7,7 @@
             <mat-card-subtitle class="text-white">{{actuales | number}}</mat-card-subtitle>
         </mat-card-content>
       </mat-card>
-      <mat-card class="example-card  text-white bg-secondary col-lg-2 ms-3">
+      <mat-card class="example-card  text-white bg-secondary  col-xs-12 col-lg-2  ms-2 mt-2 me-2">
         <mat-card-header>
             <mat-card-title>Puntos Históricos</mat-card-title>
         </mat-card-header>
@@ -15,7 +15,7 @@
             <mat-card-subtitle class="text-white font-weight-bold">{{total | number}}</mat-card-subtitle>
         </mat-card-content>
       </mat-card>
-      <mat-card class="example-card text-white bg-secondary col-lg-2 ms-3">
+      <mat-card class="example-card text-white bg-secondary col-xs-12 col-lg-2 ms-2 mt-2 me-2">
         <mat-card-header>
             <mat-card-title>Puntos Redimidos</mat-card-title>
         </mat-card-header>
@@ -25,7 +25,7 @@
       </mat-card>
       
       
-      <mat-card class="example-card text-white bg-secondary col-lg-2 ms-3">
+      <mat-card class="example-card text-white bg-secondary col-xs-12 col-lg-2 ms-2 mt-2 me-2">
         <mat-card-header>
             <mat-card-title>Ganancias</mat-card-title>
         </mat-card-header>
@@ -35,7 +35,8 @@
 
         </mat-card-content>
       </mat-card>
-</div>
-<div class="mt-5 text-center col-8">
-    <h2>¡Acá podrás revisar toda tu actividad en el panel!</h2>
+
+    <div class="mt-5 text-center col-xs-12 col-lg-8">
+        <h2>¡Acá podrás revisar toda tu actividad en el panel!</h2>
+    </div>
 </div>
