--- a/src/app/panel-why/modules/pagos-admin/pagos-admin.component.html
+++ b/src/app/panel-why/modules/pagos-admin/pagos-admin.component.html
@@ -1,4 +1,4 @@
-<div class="mb-5">
+<div class="mb-5 ms-2 ms-md-4">
     <h2>Pagos</h2>
     <p>Aqui podrás administrar los pagos de los asociados.</p>
 </div>
