--- a/src/app/panel-why/modules/pagos/components/tabla-pagos/tabla-pagos.component.html
+++ b/src/app/panel-why/modules/pagos/components/tabla-pagos/tabla-pagos.component.html
@@ -1,6 +1,6 @@
-<div class="table-container">
+<div class="ms-2 ms-md-4 me-2 me-md-4 mb-3 mb-md-0">
   <h2>Información de Pagos</h2>
-    <div class="mat-elevation-z1" style="width: 90%;">
+    <div class="mat-elevation-z1">
       <table  [dataSource]="dataSource" mat-table  matSort>
 
         <ng-container matColumnDef="points">
