--- a/src/app/panel-why/modules/perfil/pages/editar-perfil/editar-perfil.component.html
+++ b/src/app/panel-why/modules/perfil/pages/editar-perfil/editar-perfil.component.html
@@ -1,4 +1,4 @@
-<div mat-dialog-content class="container-dialog">
+<div mat-dialog-content class="ms-0 ms-md-5">
     <h2>Actualiza tu perfil</h2>
     <form [formGroup]="profileForm">
         <mat-form-field appearance="outline" class="col-xs-12 col-sm-12 col-md-5 col-lg-5 ms-1">
