--- a/src/app/panel-why/modules/puntos-admin/puntos-admin.component.html
+++ b/src/app/panel-why/modules/puntos-admin/puntos-admin.component.html
@@ -1,4 +1,4 @@
-<div class="mb-5">
+<div class="mb-5 ms-2 ms-md-4">
     <h2>Puntos</h2>
     <p>Aqui podrás administrar los puntos de los asociados.</p>
 </div>
