--- a/src/app/panel-why/side-nav/side-nav.component.scss
+++ b/src/app/panel-why/side-nav/side-nav.component.scss
@@ -15,15 +15,14 @@ mat-sidenav{
 
 mat-sidenav-content{
     img{
-        position: absolute;
-        bottom: 2em;
-        right: 2em;
+        position: fixed;
+        bottom: 0.9rem;
+        right: 0.9rem;
     }
 }
 
 .content{
     margin-top: 3em;
-    margin-left: 3em;
 }
 
 .bg-gradiente{
@@ -33,5 +32,6 @@ mat-sidenav-content{
 
 #btn-side{
     position: absolute;
-    bottom: 0;
+    top: 0.9rem;
+    right: 1rem;
 }
