--- a/src/app/panel-why/modules/perfiles/perfiles.component.html
+++ b/src/app/panel-why/modules/perfiles/perfiles.component.html
@@ -1,4 +1,4 @@
-<div class="mb-5">
+<div class="mb-5 ms-2 ms-md-4">
     <h2>Perfiles</h2>
     <p>Aqui podrás administrar a los perfiles del sistema</p>
 </div>
