--- a/src/app/panel-why/modules/perfiles/tabla-perfiles/tabla-perfiles.component.html
+++ b/src/app/panel-why/modules/perfiles/tabla-perfiles/tabla-perfiles.component.html
@@ -1,5 +1,5 @@
-<div class="table-container">
-    <div class="mat-elevation-z1" style="width: 90%;">
+<div class="ms-2 ms-md-4 me-2 me-md-4 mb-3 mb-md-0">
+    <div class="mat-elevation-z1">
       <table  [dataSource]="dataSource" mat-table  matSort>
 
         <ng-container matColumnDef="acciones">
