--- a/src/app/panel-why/modules/usuarios/tabla-usuarios/tabla-usuarios.component.html
+++ b/src/app/panel-why/modules/usuarios/tabla-usuarios/tabla-usuarios.component.html
@@ -1,15 +1,15 @@
-<div class="btns-table">
-  <button mat-stroked-button class="btn-back">
+<div>
+  <button mat-stroked-button class="btn-back float-end me-2 mb-2 me-md-4 mb-md-4">
     Cargar Usuarios
     <mat-icon matSuffix style="font-size: 1em;margin-top: .5em;"><i class="fi-rr-upload"></i></mat-icon>
   </button>
-  <button mat-raised-button class="btn-succ">
+  <button mat-raised-button class="btn-succ float-end me-2 mb-2 me-md-4 mb-md-4">
     Crear Usuario
     <mat-icon matSuffix style="font-size: 1em;margin-top: .5em;"><i class="fi-rr-add"></i></mat-icon>
   </button>
 </div>
-<div class="table-container">
-      <div class="mat-elevation-z1" style="width: 90%;">
+<div class="ms-2 ms-md-4 me-2 me-md-4 mb-5 mb-md-0">
+      <div class="mat-elevation-z1">
         <table  [dataSource]="dataSource" mat-table  matSort>
   
           <ng-container matColumnDef="acciones">
