--- a/src/app/panel-why/side-nav/menu-nav/menu-nav.component.scss
+++ b/src/app/panel-why/side-nav/menu-nav/menu-nav.component.scss
@@ -57,3 +57,13 @@ h5{
 .oro{
     color: rgb(255, 215, 0);
 }
+
+::ng-deep .mat-icon-button{
+    padding: 0;
+    min-width: 0;
+    width: auto !important;
+    height: 40px;
+    flex-shrink: 0;
+    line-height: 40px;
+    border-radius: 50%;
+}
